# HalftoneDemo

./: .gitignore  CMakeLists.txt  HalftoneDemo.sln  HalftoneDemo.vcxproj  HalftoneDemo.vcxproj.filters  LICENSE.txt  README.md  camera.cpp  camera.h  color.ps  color.vs  color_shader.cpp  color_shader.h  engine.cpp  engine.h  gui_system.cpp  gui_system.h  imgui.ini  input_system.cpp  input_system.h  main.cpp  model.cpp  model.h  render_system.cpp  render_system.h  render_texture.cpp  shader-error.txt
Classes/: base_shader.cpp  base_shader.h  camera.cpp  camera.h  color_shader.cpp  color_shader.h  effect.cpp  effect.h  i_render_pass.h  lighting_shader.cpp  lighting_shader.h  material.cpp  material.h  model.cpp  model.h  render_graph.cpp  render_graph.h  render_pass.h  render_pass_old.cpp  render_target.h  render_texture.cpp  render_texture.h
Shaders/: base.ps  base.vs  blend.ps  crosshatch.ps  dilate.ps  flat.ps  flat_opt.ps  gaussian.ps  geometry.ps  geometry.vs  geometry_pass.cpp  geometry_pass.h  halftone.ps  halftone_shader.cpp  halftone_shader.h  kuwahara.ps  lighting_pass.cpp  lighting_shader.cpp  lighting_shader.h  nms.ps  normal_edge.ps  passthrough.ps  pioaru.ps  postprocess_shader.cpp  postprocess_shader.h  shadow.vs  sobel.ps
Shaders/ConstantBuffers/: halftone_CB.h  lighting_CB.h
Shaders/RenderPasses/: blend_pass.h  canny_pass.cpp  canny_pass.h  crosshatch_pass.cpp  crosshatch_pass.h  flat_pass.h  geometry_pass.cpp  geometry_pass.h  halftone_pass.cpp  halftone_pass.h  lighting_pass.cpp  lighting_pass.h  normal_edge_pass.h  out_pass.h  pioaru_pass.cpp  pioaru_pass.h  render_pass.cpp  render_pass.h  sobel_pass.cpp  sobel_pass.h
Subsystems/: gui_system.cpp  gui_system.h  input_system.cpp  input_system.h  render_parameters.h  render_system.cpp  render_system.h
